crates/tokmd-analysis-fun/tests/snapshots/snapshot_eco__eco_grade_a.snap
---
source: crates/tokmd-analysis-fun/tests/snapshot_eco.rs
expression: json
---
{
  "eco_label": {
    "score": 95.0,
    "label": "A",
    "bytes": 500000,
    "notes": "Size-based eco label (0.48 MB)"
  }
}
