crates/tokmd-analysis-fun/tests/snapshots/snapshot_eco__eco_grade_b.snap
---
source: crates/tokmd-analysis-fun/tests/snapshot_eco.rs
expression: json
---
{
  "eco_label": {
    "score": 80.0,
    "label": "B",
    "bytes": 5242880,
    "notes": "Size-based eco label (5 MB)"
  }
}
