crates/tokmd-analysis-fun/tests/snapshots/snapshot_eco__eco_grade_c.snap
---
source: crates/tokmd-analysis-fun/tests/snapshot_eco.rs
expression: json
---
{
  "eco_label": {
    "score": 65.0,
    "label": "C",
    "bytes": 26214400,
    "notes": "Size-based eco label (25 MB)"
  }
}
