crates/tokmd-analysis-fun/tests/snapshots/snapshot_eco__eco_grade_d.snap
---
source: crates/tokmd-analysis-fun/tests/snapshot_eco.rs
expression: json
---
{
  "eco_label": {
    "score": 45.0,
    "label": "D",
    "bytes": 104857600,
    "notes": "Size-based eco label (100 MB)"
  }
}
