crates/tokmd-analysis-fun/tests/snapshots/snapshot_eco__eco_grade_e.snap
---
source: crates/tokmd-analysis-fun/tests/snapshot_eco.rs
expression: json
---
{
  "eco_label": {
    "score": 30.0,
    "label": "E",
    "bytes": 314572800,
    "notes": "Size-based eco label (300 MB)"
  }
}
