crates/tokmd-analysis-fun/tests/snapshots/snapshot_eco__eco_zero_bytes.snap
---
source: crates/tokmd-analysis-fun/tests/snapshot_eco.rs
expression: json
---
{
  "eco_label": {
    "score": 95.0,
    "label": "A",
    "bytes": 0,
    "notes": "Size-based eco label (0 MB)"
  }
}
